--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,18 @@
   "author": "Sergio Canto Sabido",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
+    "mysql": "^2.18.1",
+    "p-settle": "^5.0.0",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
+    "password-validator": "^5.2.1",
+    "xhr": "^2.6.0",
     "xss-clean": "^0.1.1"
   }
 }
